--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,10 @@
+
 {% extends 'base.html'%}
 {% block content %}
+
+
+
+
 
 <div class="container">
     <div class="row">
@@ -15,7 +20,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card-body">
-                            <h4 class="card-title">KenCoin: Keny'as first crypto currency</h4>
+                            <h4 class="card-title">KenCoin: Kenya's first crypto currency</h4>
                             <p class="card-text">Kencoin is the latest bitcoin currency to invest in... </p>
                         </div>
         
@@ -30,22 +35,23 @@
         <div class="col-md-6">
             <div class="card-column">
                 <h5>Trending</h5>
+                {% for pitch in pitch_in_html %}
                 <div class="card mb-5">
                 <div class="row">
                     <div class="col-md-6">
                         <img class="img-fluid" src="" alt="">
                     </div>
                     <div class="col-md-6">
-                        <p class="card-title" ><a href="http://" >Cloud Computing</a></p>
-                        <p class="card-text">IDEA: A cloud hosting solution</p>
+                        <p class="card-title" ><a href="http://" >{{pitch.category}}</a></p>
+                        <p class="card-text">{{pitch.title}}</p>
                     </div>
                     <div class="row card-footer">
                         <div class="col-md-6">
-                            <small class="text-muted">PostedBy:</small>
+                            <small class="text-muted">PostedBy: {{pitch.owner}}</small>
                         </div>
                         <div class="col-md-6">
-                            <span class="upvote"><i class="fa fa-thumbs-up"></i>0</span>
-                            <span class="downvote"><i class="fa fa-thumbs-down"></i>0</span>
+                            <span class="upvote"><i class="fas fa-thumbs-up"></i>0</span>
+                            <span class="downvote"><i class="fas fa-thumbs-down"></i>0</span>
                         </div>
                         
                     </div>
@@ -54,6 +60,7 @@
                 
                     
                 </div>
+                {% endfor %}
                 
                 
             </div>
