--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,49 +9,32 @@
 <div class="container">
     <div class="row">
         
-        <div class="col-md-6">
-
-            <div class="card">
-                <div class="row">
-                    <div class="col-md-12">
-                        <img class="img-fluid" src="/app/static/blockchain.jpeg" alt="">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card-body">
-                            <h4 class="card-title">KenCoin: Kenya's first crypto currency</h4>
-                            <p class="card-text">Kencoin is the latest bitcoin currency to invest in... </p>
-                        </div>
-        
-                        <div class="card-footer">
-                            <i class="fa fa-thumbs-up">0</i>
-                            <i class="fa fa-thumbs-down">0</i>
-                        </div>
-                    </div>
-                </div>           
-            </div>
-        </div>
-        <div class="col-md-6">
+        <div class="col-md-6 align-self-center">
+          
             <div class="card-column">
-                <h5>Trending</h5>
-                {% for pitch in pitch_in_html %}
+              
+                {% for pitch in pitches %}
                 <div class="card mb-5">
                 <div class="row">
-                    <div class="col-md-6">
-                        <img class="img-fluid" src="" alt="">
+                    <div class="col-md-6 card-header">
+                        <p class="card-title">{{pitch.name|upper}}</p>
                     </div>
-                    <div class="col-md-6">
-                        <p class="card-title" ><a href="http://" >{{pitch.category}}</a></p>
-                        <p class="card-text">{{pitch.title}}</p>
+                    <div class="col-md-6 card-body">
+                        <p class="card-text">{{pitch.content}}</p>
                     </div>
                     <div class="row card-footer">
                         <div class="col-md-6">
-                            <small class="text-muted">PostedBy: {{pitch.owner}}</small>
+                            <h4>
+                                <span>
+                                    <a href="{{url_for('.view-pitch',id=pitch.id)}}">Read Comments</a>
+                                </span>
+                            </h4>
+                            <!-- <small class="text-muted">PostedBy: {{pitch.owner}}</small> -->
                         </div>
                         <div class="col-md-6">
-                            <span class="upvote"><i class="fas fa-thumbs-up"></i>0</span>
-                            <span class="downvote"><i class="fas fa-thumbs-down"></i>0</span>
+                            <a href="{{url_for('.new-comment',id=pitch.id)}}">
+                                <h4>Comment</h4>
+                            </a>
                         </div>
                         
                     </div>
@@ -61,10 +44,12 @@
                     
                 </div>
                 {% endfor %}
+
+              
                 
                 
             </div>
-
+           
         </div>
         
 
