--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -6,12 +6,13 @@
 <div class="container">
     <div class="row">
         <!-- Post Column -->
+        <h2>{{category.name|upper}}</h2>
         <div class="col-md-6">
             {{wtf.quick_form(pitch_form)}}
         </div>
 
         <!-- Display Column -->
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
             {% for pitch in pitch %}
                 <div class="card mb-5">
                 <div class="row">
@@ -38,7 +39,7 @@
                     
                 </div>
                 {% endfor %}
-        </div>
+        </div> -->
     </div>
 </div>
 {% endblock %}
